# svo

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Claude.md  LICENSE  README.md  SQUARE_SPEC.md  flake.nix  justfile
backlog/: multilingual-support-en-nl.md
docs/: decision-log.md
src/: lib.rs
tasks/: 001-fix-alpha-compositing-math.md  002-overlay-filter-architecture.md  003-add-real-time-sliders-to-all-filters.md  004-improve-code-clarity-minor-refactors.md  005-verify-transparent-png-handling.md  TASK-001-stateful-wasm.md  TASK-002-refactor-combine.md  TASK-003-enable-wasm-opt.md
www/: app.js  i18n.js  index.html  style.css
www/translations/: en.json  nl.json
